0.16.11
 - fix: implement non-functional `DownloadQueue.get_status`
0.16.10
 - enh: improve download job list initialization
 - docs: consistently rename API key to API token (code unchanged)
0.16.9
 - enh: don't use global `logging.basicConfig`
 - enh: setup INFO logging for `requests` (no more DEBUG logs)
 - ref: setup DEBUG/INFO logging for `dcoraid` and `dclab`
 - tests: avoid update check in custom GUI test
 - setup: bump dclab to 0.62.11
0.16.8
 - ci: maintenance release
0.16.7
 - ci: maintenance release
0.16.6
 - ci: maintenance release
0.16.5
 - ci: maintenance release
0.16.4
 - enh: limit logs printed to 2000
 - tests: wait for complete resource dict when uploading test data
 - ci: introduce SignPath code signing for Windows executables
 - setup: bump dclab to 0.62.10
0.16.3
 - fix: fall-back to resource size estimation via S3 download header
 - tests: fix tests that checked resource size after upload
0.16.2
 - fix: convert resource file extensions to lower-case (#81)
 - fix: escape html characters in logging panel
 - enh: improve error message when registered dataset ID does not exist (#82)
 - setup: bump dclab to 0.62.7
0.16.1
 - fix: generally increase timeout for package_revise
0.16.0
 - feat: check for updates when starting the DCOR-Aid GUI
 - fix: when checking resource existence for a dataset, do not call
   "package_show" for every single resource
 - fix: use `verifiable_files` instead of `verified_files` in error message
   before verifying messages
 - fix: possible exception during upload verification with flaky connection
 - enh: increase timeout for "package_show" in `UploadJob` to 500 s
 - ref: renamed `resource_dict` to `check_resource_dict` in `resource_exists`
 - ref: add optional `dataset_dict` to `resource_exists`
0.15.5
 - fix: downloads tab became unresponsive for > 100 downloads
0.15.4
 - fix: check for already uploaded resources before attempting to compress
 - fix: timeout parameter not passed to `CKANAPI.get`
0.15.3