@@ -24,7 +24,7 @@ classifiers = [
     'Programming Language :: Python :: 3',
     'Intended Audience :: Science/Research',
 ]
-license = {text = "GPL v3"}
+license = "GPL-3.0-or-later"
 dependencies = [
     "dclab[dcor]>=0.62.11",
     "numpy>=1.21",
